// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTML HTML component 1`] = `
<div
  className="component"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.HTML"
  id="obo-id"
  tabIndex={-1}
>
  <div
    className="obojobo-draft--chunks--html viewer pad align-left"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<marquee>Example text</marquee>",
      }
    }
  />
</div>
`;

exports[`HTML HTML component with equation 1`] = `
<div
  className="component"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.HTML"
  id="obo-id"
  tabIndex={-1}
>
  <div
    className="obojobo-draft--chunks--html viewer pad align-left"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<div class=\\"latex\\">mock-katex-render-for-(x^2 + y^2 = z^2)-with-options-{\\"throwOnError\\":false}</div>",
      }
    }
  />
</div>
`;
